@@ -2,31 +2,36 @@ package com.code.monks.csm.service.impl;
 
 import com.code.monks.csm.dto.request.AddPurchaseEntryRequestDto;
 import com.code.monks.csm.dto.request.UpdatePurchaseEntryReq;
-import com.code.monks.csm.dto.response.AddPurchaseEntryResponseDto;
-import com.code.monks.csm.dto.response.PagedResponseDto;
-import com.code.monks.csm.dto.response.SearchPurchaseEntryResponse;
-import com.code.monks.csm.entity.*;
+import com.code.monks.csm.dto.response.*;
+import com.code.monks.csm.entity.CustomerEntity;
+import com.code.monks.csm.entity.PurchaseEntity;
+import com.code.monks.csm.entity.PurchaseImageEntity;
+import com.code.monks.csm.entity.SupplierEntity;
 import com.code.monks.csm.enums.UploadModuleEnum;
 import com.code.monks.csm.exception.ResourceNotFoundException;
+import com.code.monks.csm.mapper.PurchaseMapper;
 import com.code.monks.csm.repository.CustomerRepo;
 import com.code.monks.csm.repository.PurchaseEntryRepo;
-import com.code.monks.csm.repository.StaffRepo;
 import com.code.monks.csm.repository.SupplierRepo;
 import com.code.monks.csm.service.PurchaseService;
-import com.code.monks.csm.service.file.FileUploadService;
+import com.code.monks.csm.service.file.FileService;
+import com.code.monks.csm.specification.GenericSpecificationBuilder;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.time.LocalDate;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 import static com.code.monks.csm.enums.ResponseErrorCode.*;
 
@@ -38,8 +43,8 @@ public class PurchaseServiceImpl implements PurchaseService {
     private final PurchaseEntryRepo purchaseEntryRepo;
     private final CustomerRepo customerRepo;
     private final SupplierRepo supplierRepo;
-    private final StaffRepo staffRepo;
-    private final FileUploadService fileUploadService;
+    private final FileService fileService;
+    private final PurchaseMapper purchaseMapper;
 
     @Override
     @Transactional
@@ -47,6 +52,7 @@ public class PurchaseServiceImpl implements PurchaseService {
             AddPurchaseEntryRequestDto requestDto,
             List<MultipartFile> images
     ) {
+        log.info("Add Purchase Entry called ");
 
         PurchaseEntity entity = new PurchaseEntity();
 
@@ -61,6 +67,11 @@ public class PurchaseServiceImpl implements PurchaseService {
 
         handleImages(entity, images);
 
+        log.info("Saving Purchase entry | date={} | staffId={} | amount={}",
+                entity.getDate(),
+                entity.getStaffId(),
+                entity.getPurchaseAmount());
+
         purchaseEntryRepo.save(entity);
 
         return AddPurchaseEntryResponseDto.builder()
@@ -74,7 +85,8 @@ public class PurchaseServiceImpl implements PurchaseService {
             Integer supplierId,
             Integer customerId,
             int page,
-            int size)   {
+            int size)
+    {
 
         int pageIndex = Math.max(page, 0);
         Pageable pageable = PageRequest.of(
@@ -85,61 +97,27 @@ public class PurchaseServiceImpl implements PurchaseService {
                         Sort.Order.desc("id")
                 )
         );
-        Page<PurchaseEntity> purchaseRecords;
+
         log.info("Purchase search called: fromDate={}, toDate={}, supplierId={}, customerId={}",
                 fromDate, toDate, supplierId, customerId);
 
-        if (fromDate != null && toDate != null) {
+        GenericSpecificationBuilder<PurchaseEntity> builder =
+                new GenericSpecificationBuilder<>();
 
-            if (supplierId != null && customerId != null) {
-                purchaseRecords =
-                        purchaseEntryRepo.findByDateBetweenAndSuppliers_IdAndCustomer_Id(
-                                fromDate, toDate, supplierId, customerId, pageable
-                        );
+        Specification<PurchaseEntity> spec = builder
+                .fromDate("date", fromDate)
+                .toDate("date", toDate)
+                .joinEqual("suppliers", "id", supplierId)
+                .joinEqual("customer", "id", customerId)
+                .build();
 
-            } else if (supplierId != null) {
-                purchaseRecords =
-                        purchaseEntryRepo.findByDateBetweenAndSuppliers_Id(
-                                fromDate, toDate, supplierId, pageable
-                        );
-
-            } else if (customerId != null) {
-                purchaseRecords =
-                        purchaseEntryRepo.findByDateBetweenAndCustomer_Id(
-                                fromDate, toDate, customerId, pageable
-                        );
-
-            } else {
-                purchaseRecords =
-                        purchaseEntryRepo.findByDateBetween(fromDate, toDate, pageable);
-            }
-
-        } else {
-            // NO DATE FILTER
-            if (supplierId != null && customerId != null) {
-                purchaseRecords =
-                        purchaseEntryRepo.findBySuppliers_IdAndCustomer_Id(
-                                supplierId, customerId, pageable
-                        );
-
-            } else if (supplierId != null) {
-                purchaseRecords =
-                        purchaseEntryRepo.findBySuppliers_Id(supplierId, pageable);
-
-            } else if (customerId != null) {
-                purchaseRecords =
-                        purchaseEntryRepo.findByCustomer_Id(customerId, pageable);
-
-            } else {
-                purchaseRecords =
-                        purchaseEntryRepo.findAll(pageable);
-            }
-        }
+        Page<PurchaseEntity> purchaseRecords =
+                purchaseEntryRepo.findAll(spec, pageable);
 
         List<SearchPurchaseEntryResponse> content =
                 purchaseRecords.getContent()
                         .stream()
-                        .map(this::convertToResponseDto)
+                        .map(purchaseMapper::toSearch)
                         .toList();
 
         return new PagedResponseDto<>(
@@ -154,7 +132,11 @@ public class PurchaseServiceImpl implements PurchaseService {
 
     @Override
     @Transactional
-    public Map<String, Object> updatePurchaseEntry(int id, UpdatePurchaseEntryReq req) {
+    public Map<String, Object> updatePurchaseEntry(
+            int id,
+            UpdatePurchaseEntryReq req,
+            List<MultipartFile> newImages
+    ) {
 
         log.info("Update Purchase Entry called for ID={}", id);
 
@@ -174,7 +156,11 @@ public class PurchaseServiceImpl implements PurchaseService {
                 req.getCustomerId(),
                 req.getPurchaseAmount()
         );
+        log.info("Updating Purchase entry ID={} | newAmount={}",
+                id,
+                entity.getPurchaseAmount());
 
+        handleImageUpdate(entity, req.getExistingImageKeys(), newImages);
         PurchaseEntity updated = purchaseEntryRepo.save(entity);
 
         Map<String, Object> response = new HashMap<>();
@@ -200,48 +186,21 @@ public class PurchaseServiceImpl implements PurchaseService {
         return response;
     }
 
-    private SearchPurchaseEntryResponse convertToResponseDto(PurchaseEntity entity) {
+    @Override
+    @Transactional(readOnly = true)
+    public PurchaseDetailResponse getPurchaseById(int id) {
 
-        StaffEntity staff =
-                entity.getStaffId() != null
-                        ? staffRepo.findById(entity.getStaffId()).orElse(null)
-                        : null;
+        PurchaseEntity entity = purchaseEntryRepo.findById(id)
+                .orElseThrow(() ->
+                        new ResourceNotFoundException(
+                                PURCHASE_ENTRY_NOT_FOUND,
+                                String.valueOf(id)
+                        )
+                );
 
-        return SearchPurchaseEntryResponse.builder()
-                .id(entity.getId())
-                .date(entity.getDate())
-                .staffId(entity.getStaffId())
-                .staffName(staff != null ? staff.getStaffName() : null)
-
-                .supplierIds(
-                        entity.getSuppliers().stream()
-                                .map(SupplierEntity::getId)
-                                .toList()
-                )
-                .supplierNames(
-                        entity.getSuppliers().stream()
-                                .map(SupplierEntity::getSupplierName)
-                                .toList()
-                )
-
-                .customerId(
-                        entity.getCustomer() != null
-                                ? entity.getCustomer().getId()
-                                : null
-                )
-                .customerName(
-                        entity.getCustomer() != null
-                                ? entity.getCustomer().getCustomerName()
-                                : null
-                )
-
-                .purchaseAmount(
-                        entity.getPurchaseAmount() != null
-                                ? entity.getPurchaseAmount() / 100.0
-                                : 0.0
-                )
-                .build();
+        return purchaseMapper.toDetail(entity);
     }
+
     private void applyRequestToEntity(
             PurchaseEntity entity,
             LocalDate date,
@@ -297,23 +256,92 @@ public class PurchaseServiceImpl implements PurchaseService {
     private void handleImages(PurchaseEntity entity, List<MultipartFile> images) {
 
         if (images == null || images.isEmpty()) {
+            log.info("No images provided for Purchase entry");
             return;
         }
 
-        List<String> imageUrls =
-                fileUploadService.uploadFiles(images, UploadModuleEnum.PURCHASE);
+        log.info("Uploading {} image(s) for Purchase entry",
+                images.size());
+
+        List<FileUploadResponse> uploadedFiles =
+                fileService.uploadFiles(
+                        images,
+                        UploadModuleEnum.PURCHASE
+                );
 
         List<PurchaseImageEntity> imageEntities =
-                imageUrls.stream()
-                        .map(url -> {
-                            PurchaseImageEntity image = new PurchaseImageEntity();
-                            image.setImageUrl(url);
+                uploadedFiles.stream()
+                        .map(response -> {
+                            PurchaseImageEntity image =
+                                    new PurchaseImageEntity();
+
+                            image.setObjectKey(response.getKey());
+                            image.setPublicUrl(response.getPublicUrl());
                             image.setPurchase(entity);
+
                             return image;
                         })
-                        .collect(Collectors.toList());
+                        .toList();
 
         entity.setImages(imageEntities);
+        log.info("Successfully uploaded {} image(s) for Purchase entry",
+                imageEntities.size());
     }
 
+    private void handleImageUpdate(
+            PurchaseEntity entity,
+            List<String> existingKeys,
+            List<MultipartFile> newImages
+    ) {
+
+        List<PurchaseImageEntity> currentImages = entity.getImages();
+
+        if (currentImages == null) {
+            currentImages = new ArrayList<>();
+            entity.setImages(currentImages);
+        }
+
+        log.info("Starting image update | existingImages={}",
+                currentImages.size());
+
+        // Identify removed images
+        List<PurchaseImageEntity> toRemove =
+                currentImages.stream()
+                        .filter(img -> existingKeys == null ||
+                                !existingKeys.contains(img.getObjectKey()))
+                        .toList();
+        log.info("Images to remove count={}", toRemove.size());
+        // Remove from entity
+        currentImages.removeAll(toRemove);
+
+        // Delete from storage
+        for (PurchaseImageEntity img : toRemove) {
+            fileService.deleteFile(img.getObjectKey());
+            log.info("Deleted image from storage | key={}", img.getObjectKey());
+        }
+
+        //Upload new images
+        if (newImages != null && !newImages.isEmpty()) {
+            log.info("Uploading {} new image(s)", newImages.size());
+            List<FileUploadResponse> uploadedFiles =
+                    fileService.uploadFiles(
+                            newImages,
+                            UploadModuleEnum.PURCHASE
+                    );
+
+            for (FileUploadResponse response : uploadedFiles) {
+
+                PurchaseImageEntity image = new PurchaseImageEntity();
+                image.setObjectKey(response.getKey());
+                image.setPublicUrl(response.getPublicUrl());
+                image.setPurchase(entity);
+
+                currentImages.add(image);
+                log.info("Added new image | key={}", response.getKey());
+            }
+        }
+
+        log.info("Image update completed | finalImageCount={}",
+                currentImages.size());
+    }
 }
